--- a/src/index.css
+++ b/src/index.css
@@ -85,9 +85,20 @@ button:focus-visible {
   box-sizing: border-box;
 }
 
+.text-banner {
+  padding-top: 10rem;
+}
 
 .banner {
-  margin-top: 3rem;
+  margin-top: 5rem;
+  font-size: 30px;
+  width: 100%;
+  height: 450px;
+
+  background: linear-gradient(-45deg, #bbf2ff99 20%, transparent 20% 80%, #bbf2ff99 80% 100%), linear-gradient(45deg, #bbf2ff99 20%, transparent 20% 80%, #bbf2ff99 80% 100%), linear-gradient(-45deg, #ffffff 33%, transparent 33% 66%, #ffffff 66%), linear-gradient(45deg, transparent 33%, #f6ffde 33% 66%, transparent 66%);
+        background-size: 3em 3em;
+        background-color: #ffffff;
+        opacity: 1
 }
 
 #navbar-right{
@@ -95,6 +106,7 @@ button:focus-visible {
   font-size: 18px !important;
   display: flex;
   flex-direction: row;
+  gap: 2rem;
 }
 
 .nav {
@@ -134,7 +146,7 @@ button:focus-visible {
 
 .nav a:hover {
   transition: 0.5s;
-  color: rgb(131, 131, 131);
+  color: rgb(21, 21, 21);
 }
 
 .nav a::before {
@@ -188,6 +200,8 @@ button:focus-visible {
   padding-left: 10px;
 }
 
+
+
 .about-text {
   font-family: 'Lora', serif;
   margin-top: 0rem;
@@ -199,6 +213,31 @@ button:focus-visible {
 .about-title {
   margin-top: 5rem;
   margin-bottom: 3rem;
+}
+
+.about-subtitle {
+  margin-top: 2rem;
+  margin-bottom: 0.8rem;
+}
+
+.sub-heading-text {
+  margin-bottom: 7rem;
+}
+
+.about-subtitle-title {
+  margin-top: 5rem;
+  font-size: 40px;
+}
+
+.icons {
+  margin-top: 1rem;
+  display: flex;
+  flex-direction: row;
+  gap: 0.8rem;
+}
+
+.tagline {
+  margin-top: -0.5rem;
 }
 
 
@@ -424,21 +463,21 @@ video {
 
 }
 
-@media screen and (max-width:1000px) {
+@media screen and (max-width:820px) {
   #navbar-right{
     --stripe: #ffedd8;
     --bg: #ffe4e4;
-
     background: linear-gradient(135deg, var(--bg) 25%, transparent 25%) -50px 0,
-      linear-gradient(225deg, var(--bg) 25%, transparent 25%) -50px 0,
-      linear-gradient(315deg, var(--bg) 25%, transparent 25%),
-      linear-gradient(45deg, var(--bg) 25%, transparent 25%);
+    linear-gradient(225deg, var(--bg) 25%, transparent 25%) -50px 0,
+    linear-gradient(315deg, var(--bg) 25%, transparent 25%),
+    linear-gradient(45deg, var(--bg) 25%, transparent 25%);
     background-size: 100px 100px;
     background-color: var(--stripe);
     background-color: #ffecec !important;
     font-family: 'Lora', serif;
     font-size: 18px !important;
     border: 5px solid rgb(255, 185, 185);
+    border-radius: 10px;
     display: flex;
     flex-direction: column !important;
     align-items: flex-start;
